// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Pane should render Default properly 1`] = `
<RightPaneForm
  formError=""
  isExecuting={false}
  onSubmit={[Function]}
  submitButtonText="Apply"
>
  <div
    className="paneMainContent"
  >
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <fieldset>
          <legend
            className="settingsSectionLabel legendLabel"
            id="pageOptions"
          >
            Page Options
          </legend>
          <InfoTooltip>
            Choose Custom to specify a fixed amount of query results to show, or choose Unlimited to show as many query results per page.
          </InfoTooltip>
          <StyledChoiceGroup
            ariaLabelledBy="pageOptions"
            onChange={[Function]}
            options={
              [
                {
                  "key": "custom",
                  "text": "Custom",
                },
                {
                  "key": "unlimited",
                  "text": "Unlimited",
                },
              ]
            }
            selectedKey="custom"
            styles={
              {
                "flexContainer": [
                  {
                    "selectors": {
                      ".ms-ChoiceField": {
                        "marginTop": 0,
                      },
                      ".ms-ChoiceField-wrapper label": {
                        "fontSize": 12,
                        "paddingTop": 0,
                      },
                      ".ms-ChoiceFieldGroup root-133": {
                        "clear": "both",
                      },
                    },
                  },
                ],
                "root": {
                  "clear": "both",
                },
              }
            }
          />
        </fieldset>
      </div>
      <div
        className="tabs settingsSectionPart"
      >
        <div
          className="tabcontent"
        >
          <div
            className="settingsSectionLabel"
          >
            Query results per page
            <InfoTooltip>
              Enter the number of query results that should be shown per page.
            </InfoTooltip>
          </div>
          <StyledSpinButton
            ariaLabel="Custom query items per page"
            className="textfontclr"
            decrementButtonAriaLabel="Decrease value by 1"
            incrementButtonAriaLabel="Increase value by 1"
            min={1}
            onDecrement={[Function]}
            onIncrement={[Function]}
            onValidate={[Function]}
            step={1}
            value="0"
          />
        </div>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="ruThresholdLabel"
          >
            RU Threshold
          </legend>
          <InfoTooltip>
            If a query exceeds a configured RU threshold, the query will be aborted.
          </InfoTooltip>
        </div>
        <div>
          <StyledToggleBase
            defaultChecked={true}
            label="Enable RU threshold"
            onChange={[Function]}
            styles={
              {
                "container": {},
                "label": {
                  "display": "block",
                  "fontSize": 12,
                  "fontWeight": 400,
                },
                "pill": {},
                "root": {},
                "text": {},
                "thumb": {},
              }
            }
          />
        </div>
        <div>
          <StyledSpinButton
            decrementButtonAriaLabel="Decrease value by 1000"
            defaultValue="5000"
            incrementButtonAriaLabel="Increase value by 1000"
            label="RU Threshold (RU)"
            labelPosition={0}
            min={1}
            onChange={[Function]}
            step={1000}
            styles={
              {
                "arrowButtonsContainer": {},
                "icon": {},
                "input": {},
                "label": {
                  "fontSize": 12,
                  "fontWeight": 400,
                },
                "labelWrapper": {},
                "root": {
                  "paddingBottom": 10,
                },
                "spinButtonWrapper": {},
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryTimeoutLabel"
          >
            Query Timeout
          </legend>
          <InfoTooltip>
            When a query reaches a specified time limit, a popup with an option to cancel the query will show unless automatic cancellation has been enabled
          </InfoTooltip>
        </div>
        <div>
          <StyledToggleBase
            defaultChecked={false}
            label="Enable query timeout"
            onChange={[Function]}
            styles={
              {
                "container": {},
                "label": {
                  "display": "block",
                  "fontSize": 12,
                  "fontWeight": 400,
                },
                "pill": {},
                "root": {},
                "text": {},
                "thumb": {},
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="defaultQueryResultsView"
          >
            Default Query Results View
          </legend>
          <InfoTooltip>
            Select the default view to use when displaying query results.
          </InfoTooltip>
        </div>
        <div>
          <StyledChoiceGroup
            ariaLabelledBy="defaultQueryResultsView"
            onChange={[Function]}
            options={
              [
                {
                  "key": "vertical",
                  "text": "Vertical",
                },
                {
                  "key": "horizontal",
                  "text": "Horizontal",
                },
              ]
            }
            selectedKey="vertical"
            styles={
              {
                "flexContainer": [
                  {
                    "selectors": {
                      ".ms-ChoiceField": {
                        "marginTop": 0,
                      },
                      ".ms-ChoiceField-wrapper label": {
                        "fontSize": 12,
                        "paddingTop": 0,
                      },
                      ".ms-ChoiceFieldGroup root-133": {
                        "clear": "both",
                      },
                    },
                  },
                ],
                "root": {
                  "clear": "both",
                },
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Retry Settings
          <InfoTooltip>
            Retry policy associated with throttled requests during CosmosDB queries.
          </InfoTooltip>
        </div>
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryRetryAttemptsLabel"
          >
            Max retry attempts
          </legend>
          <InfoTooltip>
            Max number of retries to be performed for a request. Default value 9.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            {
              "arrowButtonsContainer": {},
              "icon": {},
              "input": {},
              "label": {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": {},
              "root": {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": {},
            }
          }
          value="9"
        />
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryRetryAttemptsLabel"
          >
            Fixed retry interval (ms)
          </legend>
          <InfoTooltip>
            Fixed retry interval in milliseconds to wait between each retry ignoring the retryAfter returned as part of the response. Default value is 0 milliseconds.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1000"
          incrementButtonAriaLabel="Increase value by 1000"
          labelPosition={0}
          min={1000}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1000}
          styles={
            {
              "arrowButtonsContainer": {},
              "icon": {},
              "input": {},
              "label": {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": {},
              "root": {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": {},
            }
          }
          value="0"
        />
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryRetryAttemptsLabel"
          >
            Max wait time (s)
          </legend>
          <InfoTooltip>
            Max wait time in seconds to wait for a request while the retries are happening. Default value 30 seconds.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            {
              "arrowButtonsContainer": {},
              "icon": {},
              "input": {},
              "label": {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": {},
              "root": {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": {},
            }
          }
          value="30"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart settingsSectionInlineCheckbox"
      >
        <div
          className="settingsSectionLabel"
        >
          Enable container pagination
          <InfoTooltip>
            Load 50 containers at a time. Currently, containers are not pulled in alphanumeric order.
          </InfoTooltip>
        </div>
        <StyledCheckboxBase
          ariaLabel="Enable container pagination"
          checked={false}
          className="padding"
          onChange={[Function]}
          styles={
            {
              "label": {
                "padding": 0,
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart settingsSectionInlineCheckbox"
      >
        <div
          className="settingsSectionLabel"
        >
          Enable cross-partition query
          <InfoTooltip>
            Send more than one request while executing a query. More than one request is necessary if the query is not scoped to single partition key value.
          </InfoTooltip>
        </div>
        <StyledCheckboxBase
          ariaLabel="Enable cross partition query"
          checked={false}
          className="padding"
          onChange={[Function]}
          styles={
            {
              "label": {
                "padding": 0,
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Max degree of parallelism
          <InfoTooltip>
            Gets or sets the number of concurrent operations run client side during parallel query execution. A positive property value limits the number of concurrent operations to the set value. If it is set to less than 0, the system automatically decides the number of concurrent operations to run.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          ariaLabel="Max degree of parallelism"
          className="textfontclr"
          id="max-degree"
          min={-1}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          role="textbox"
          step={1}
          value="6"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Clear History
        </CustomizedDefaultButton>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Explorer Version
        </div>
        <div />
      </div>
    </div>
  </div>
</RightPaneForm>
`;

exports[`Settings Pane should render Gremlin properly 1`] = `
<RightPaneForm
  formError=""
  isExecuting={false}
  onSubmit={[Function]}
  submitButtonText="Apply"
>
  <div
    className="paneMainContent"
  >
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Retry Settings
          <InfoTooltip>
            Retry policy associated with throttled requests during CosmosDB queries.
          </InfoTooltip>
        </div>
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryRetryAttemptsLabel"
          >
            Max retry attempts
          </legend>
          <InfoTooltip>
            Max number of retries to be performed for a request. Default value 9.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            {
              "arrowButtonsContainer": {},
              "icon": {},
              "input": {},
              "label": {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": {},
              "root": {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": {},
            }
          }
          value="9"
        />
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryRetryAttemptsLabel"
          >
            Fixed retry interval (ms)
          </legend>
          <InfoTooltip>
            Fixed retry interval in milliseconds to wait between each retry ignoring the retryAfter returned as part of the response. Default value is 0 milliseconds.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1000"
          incrementButtonAriaLabel="Increase value by 1000"
          labelPosition={0}
          min={1000}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1000}
          styles={
            {
              "arrowButtonsContainer": {},
              "icon": {},
              "input": {},
              "label": {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": {},
              "root": {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": {},
            }
          }
          value="0"
        />
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryRetryAttemptsLabel"
          >
            Max wait time (s)
          </legend>
          <InfoTooltip>
            Max wait time in seconds to wait for a request while the retries are happening. Default value 30 seconds.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            {
              "arrowButtonsContainer": {},
              "icon": {},
              "input": {},
              "label": {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": {},
              "root": {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": {},
            }
          }
          value="30"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart settingsSectionInlineCheckbox"
      >
        <div
          className="settingsSectionLabel"
        >
          Enable container pagination
          <InfoTooltip>
            Load 50 containers at a time. Currently, containers are not pulled in alphanumeric order.
          </InfoTooltip>
        </div>
        <StyledCheckboxBase
          ariaLabel="Enable container pagination"
          checked={false}
          className="padding"
          onChange={[Function]}
          styles={
            {
              "label": {
                "padding": 0,
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Display Gremlin query results as: 
          <InfoTooltip>
            Select Graph to automatically visualize the query results as a Graph or JSON to display the results as JSON.
          </InfoTooltip>
        </div>
        <StyledChoiceGroup
          aria-label="Graph Auto-visualization"
          onChange={[Function]}
          options={
            [
              {
                "key": "false",
                "text": "Graph",
              },
              {
                "key": "true",
                "text": "JSON",
              },
            ]
          }
          selectedKey="false"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Clear History
        </CustomizedDefaultButton>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Explorer Version
        </div>
        <div />
      </div>
    </div>
  </div>
</RightPaneForm>
`;
